<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonDetails">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="328dp"
        android:layout_height="217dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:background="@drawable/box_title_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView2"
                android:layout_width="143dp"
                android:layout_height="153dp"
                android:layout_marginTop="16dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/lightGray"
                android:contentDescription="@string/image_alt"
                android:src="@drawable/my_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                style="@style/CustomSubTitleStyleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/person_details_page_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <Button
        android:id="@+id/deletePersonBtn"
        android:layout_width="140dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="52dp"
        android:background="@color/rose"
        android:drawableStart="@drawable/ic_baseline_delete_24"
        android:padding="10dp"
        android:text="@string/person_details_page_button_delete"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/editPersonBtn"
        android:layout_width="140dp"
        android:layout_height="37dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:background="@color/lightGray"
        android:drawableStart="@drawable/ic_baseline_edit_24"
        android:padding="10dp"
        android:text="@string/person_details_page_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="429dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deletePersonBtn"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/textView2"
            style="@style/CustomSubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="76dp"
            android:text="@string/person_details_page_first_name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_person_first_name"
            android:layout_width="135dp"
            android:layout_height="20dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="40dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/CustomSubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/person_details_page_last_name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/details_person_last_name"
            android:layout_width="132dp"
            android:layout_height="20dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="44dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_person_first_name" />

        <TextView
            android:id="@+id/textView6"
            style="@style/CustomSubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:text="@string/person_details_page_email_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/details_person_email"
            android:layout_width="130dp"
            android:layout_height="21dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="48dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_person_last_name" />

        <TextView
            android:id="@+id/textView8"
            style="@style/CustomSubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:text="@string/person_details_page_date_naissance_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/details_person_date_naissance"
            android:layout_width="124dp"
            android:layout_height="21dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="52dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_person_email" />

        <TextView
            android:id="@+id/textView10"
            style="@style/CustomSubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/person_details_page_date_enregistrement_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/details_person_date_enregistrement"
            android:layout_width="124dp"
            android:layout_height="19dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="52dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_person_date_naissance" />

        <TextView
            android:id="@+id/textView12"
            style="@style/CustomSubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="Modifié le "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/details_person_date_modification"
            android:layout_width="121dp"
            android:layout_height="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="56dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_person_date_enregistrement" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>